Fix: images hide on mobiles

--- a/output.css
+++ b/output.css
@@ -539,12 +539,12 @@ video {
   display: flex;
 }
 
-.aspect-auto {
-  aspect-ratio: auto;
-}
-
 .aspect-square {
   aspect-ratio: 1 / 1;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .h-min {
